--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "geo-tz": "^7.0.2",
     "jsonwebtoken": "^8.5.1",
+    "moment-timezone": "^0.5.34",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
